--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,37 @@
-name: CI/CD - Build and Push Docker Image
+name: CI/CD - democyber
 
+# Trigger the workflow on push or pull request to main
 on:
   push:
-    branches: [ "main" ]  # runs every time you push to main
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
-    steps:
-      # 1️⃣ Checkout source code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    env:
+      DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/democyber:latest
 
-      # 2️⃣ Set up Java 17 for Maven build
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+    steps:
+      # Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Install Java
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
-      # 3️⃣ Build your Spring Boot JAR
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
+        # Compile Java code
+      - name: Compile Java
+        run: mvn compile
 
-      # 4️⃣ Log in to Docker Hub using your secrets
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN2 }}
+      # Build Maven
+      - name: Build Java project with Maven
+        run: mvn clean package
 
-      # 5️⃣ Build Docker image
-      - name: Build Docker image
-        run: docker build -t younesjr/democyber:latest .
 
-      # 6️⃣ Push image to Docker Hub
-      - name: Push Docker image
-        run: docker push younesjr/democyber:latest
