feat: add gitleaks report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,11 @@ jobs:
       # Gitleaks scan (before compilation)
       - name: Run Gitleaks scan
         uses: zricethezav/gitleaks-action@v2
+      # Upload the Gitleaks report
+      - name: Upload Gitleaks report
+        uses: actions/upload-artifact@v4
+        with:
+          name: gitleaks-report
+          path: results.sarif
 
 
