--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,22 @@ jobs:
         with:
           name: gitleaks-report
           path: results.sarif
+      # Login Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN2 }}
+      # Build Docker image
+      - name: Build Docker image
+        run: docker build -t $DOCKER_IMAGE_NAME 
+      # Test Docker image
+      - name: Test Docker image locally
+        run: |
+          docker run -d --name democyber-test -p 8080:8080 $DOCKER_IMAGE_NAME
+          sleep 10
+          curl -f htp://localhost:8080 || echo "App not responding"
+          docker stop democyber-test
+          docker rm democyber-test
 
 
