--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN2 }}
       # Build Docker image
       - name: Build Docker image
-        run: docker build -t $DOCKER_IMAGE_NAME 
+        run: docker build -t $DOCKER_IMAGE_NAME .
       # Test Docker image
       - name: Test Docker image locally
         run: |
