--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,8 +67,16 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: democyber:latest
-          format: 'table'
+          format: 'json'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
+          output: 'trivy-report.txt'
+
+      #Trivy report upload
+      - name: Upload Trivy scan report
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report
+          path: trivy-report.txt
 
 
