feat: add docker push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,5 +77,8 @@ jobs:
         with:
           name: trivy-report
           path: trivy-report.json
+      # Push Docker image sur Docker Hub
+      - name: Push Docker image
+        run: docker push $DOCKER_IMAGE_NAME
 
 
